--- a/EclipseWS/Clockface/res/values/strings.xml
+++ b/EclipseWS/Clockface/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Clockface</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Приложение установлено. Добавьте виджет на главный экран (длинный тап по свободному месту на главном экране - добавить - виджет)</string>
     
     <string name="clockface_2_2">Clockface 2x2</string>
     <string name="clockface_3_3">Clockface 3x3</string>
