--- a/EclipseWS/Clockface/res/values/strings.xml
+++ b/EclipseWS/Clockface/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Приложение установлено. Добавьте виджет на главный экран (длинный тап по свободному месту на главном экране - добавить - виджет)</string>
     
-    <string name="clockface_2_2">Clockface 2x2</string>
-    <string name="clockface_3_3">Clockface 3x3</string>
+    <string name="clockface_81_2_2">Clockface 81 2x2</string>
+    <string name="clockface_81_3_3">Clockface 81 3x3</string>
 
 </resources>
