--- a/EclipseWS/Clockface/res/values/strings.xml
+++ b/EclipseWS/Clockface/res/values/strings.xml
@@ -7,5 +7,6 @@
     
     <string name="clockface_81_2_2">Clockface 81 2x2</string>
     <string name="clockface_81_3_3">Clockface 81 3x3</string>
+    <string name="clockface_81_4_4">Clockface 81 4x4</string>
 
 </resources>
