--- a/EclipseWS/Clockface/res/values/strings.xml
+++ b/EclipseWS/Clockface/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Clockface</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Приложение установлено. Добавьте виджет на главный экран (длинный тап по свободному месту на главном экране - добавить - виджет)</string>
+    <string name="author">Автор - Владимир Шалимов (pvolan.ru)\nДля свободного пространства Циферблат (ziferblat.net)</string>
     
     <string name="clockface_classic_4_4">Clockface 4x4</string>
     <string name="clockface_classic_3_3">Clockface 3x3</string>
